fix mobile popup layout issues

--- a/src/app/shared/popup/activate-account/activate-account-popup.component.scss
+++ b/src/app/shared/popup/activate-account/activate-account-popup.component.scss
@@ -17,6 +17,14 @@
   background-color: #40278C!important;
 }
 
+@media (max-width: 400px) {
+  input,
+  input::-webkit-input-placeholder {
+    font-size: 12px;
+    line-height: 12px;
+  }
+}
+
 .success-checkmark {
   width: 80px;
   height: 115px;
